--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@ main{
     height: 80%;
     row-gap: 1.5rem;
     width: 90%;
-    padding-bottom:2rem ;
+    padding-top:5rem;
+    padding-bottom:5rem ;
    box-sizing: border-box;
   }
 }
