--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,9 @@ body{
   background-color: hsl(226, 43%, 10%);
 }
 @media only screen and (max-width:600px) and (min-width:375px){
-  
+  html,body{
+    height: auto;
+  }
   #root{
   overflow:scroll ;  
 }
