--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,14 @@ main{
    box-sizing: border-box;
   }
 }
+@media only screen and (min-width:712px) and (max-width:801px) {
+  main{
+    flex-direction: column;
+    height: 90%;
+    row-gap: 1.5rem;
+    width: 90%;
+    padding-top:5rem;
+    padding-bottom:5rem ;
+   box-sizing: border-box;
+  }
+}
