--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -84,3 +84,25 @@
         font-size: 1.5rem;
     }
 }
+@media only screen and (min-width:712px) and (max-width:801px) {
+    #person{
+        width:100%;
+        height: 35%;
+    } 
+    #information{
+        height: 10rem;
+        flex-direction: row;
+        align-items: center;
+        column-gap: 1rem;
+    }
+    #time{
+        flex-direction: row;
+    }
+    #name{
+        flex-direction: row;
+    
+    }
+    .name{
+        font-size: 1.5rem;
+    }
+}
