--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face{
   font-family: 'Rubik';
-  src: url('/assets/Rubik/static/Rubik-Light.ttf');
+  src: url('../src/assets/Rubik/static/Rubik-Regular.ttf');
 }
 html{
   width: 100%;
